feat: Refactor Home and Services pages into modular components
- Created FeatureCard component for displaying features in a card format.
- Developed WhyChooseTechloom component to showcase reasons to choose Techloom.
- Implemented Home component to structure the main page layout, integrating Hero, WhyChooseTechloom, and HomeFooter.
- Removed legacy HomePage component to streamline the codebase.
- Added ServicesHero, ServicesList, and ServicesCallToAction components for the Services page.
- Replaced ServicesPage with a new modular Services component structure.
- Introduced ServiceCard component for individual service representation.
- Updated theme colors and button styles for improved UI consistency.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/techloom-org/landing-page/issues"
   },
-  "homepage": "https://github.com/techloom-org/landing-page#readme",
+  "Home": "https://github.com/techloom-org/landing-page#readme",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
