Enhance About Page and Team Section with New Features and Optimizations
- Refactored MissionVision component to improve layout and animations.
- Introduced TeamSection component showcasing team highlights and stats.
- Redesigned ValuesSection with improved card layout and animations.
- Added structured data for SEO in About page.
- Created animations utility styles for smoother transitions and effects.
- Optimized performance for card and avatar components.
- Updated theme configurations for better styling consistency.
- Removed unnecessary console logs from various components.
- Enhanced overall responsiveness and visual appeal across sections.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "dev": "rsbuild dev",
     "build": "rsbuild build",
-    "preview": "rsbuild preview"
+    "preview": "rsbuild preview",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "repository": {
     "type": "git",
@@ -31,5 +35,18 @@
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.6.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.27.4",
+    "@babel/eslint-parser": "^7.27.5",
+    "@babel/preset-react": "^7.27.1",
+    "@eslint/js": "^9.28.0",
+    "@rsbuild/plugin-eslint": "^1.1.1",
+    "ajv": "^8.17.1",
+    "eslint": "^9.28.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "prettier": "^3.5.3"
   }
 }
