feat(portfolio): Implement comprehensive portfolio section with project details, grid layout, and video integration
- Added Video component for showcasing project videos with controls and fullscreen functionality.
- Created project registry to manage project metadata and components.
- Developed PortfolioCard component for displaying individual project cards in a grid layout.
- Implemented PortfolioGrid to render all projects dynamically.
- Introduced PortfolioHero for the main portfolio landing section with a gradient background and decorative elements.
- Built PortfolioDetail page to show detailed views of individual projects.
- Created separate project pages for Dawwa, EvoShutter, and Tupperware Store with placeholder content.
- Established routing for portfolio pages and integrated with the main application routing.
- Enhanced user experience with animations and responsive design across all components.

--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@mui/material": "^7.1.1",
     "@rsbuild/core": "^1.3.22",
     "@rsbuild/plugin-react": "^1.3.2",
+    "framer-motion": "^12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
