--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "firebase": "^12.2.1",
     "firebase-admin": "^13.5.0",
     "framer-motion": "^12.16.0",
+    "gsap": "^3.13.0",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
