Add SEO optmizations

--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=techloom-landing-c54f9.firebasestorage.app
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=567229984586
 REACT_APP_FIREBASE_APP_ID=1:567229984586:web:11c21d80ad9ab31eb51bb3
 REACT_APP_FIREBASE_MEASUREMENT_ID=G-NC1CVMQ4PB
+
+# Google Analytics 4 Configuration
+REACT_APP_GA4_MEASUREMENT_ID=G-NC1CVMQ4PB
+
+# Google Tag Manager Configuration
+REACT_APP_GTM_CONTAINER_ID=GTM-KKM8LBG4
